--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -20,6 +20,7 @@ backend {
                 String? disks
                 Int? preemptible
                 Int? maxRetries
+                String bind_cmd = ""
                 """
 
                 submit = """
@@ -53,7 +54,7 @@ backend {
                     echo "Successfully pulled ${docker}!"
                 # Create wrapper script around docker command
                 echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-                echo singularity exec --containall --bind ${cwd}:${docker_cwd} docker://${docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+                echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} docker://${docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
                 # Submit job
                 qsub \
                 -terse \
@@ -64,7 +65,7 @@ backend {
                 -o ${out} \
                 -e ${err} \
                 -pe smp ${cpu} \
-                ${"-l mem_free=" + mem_mb + "M"} \
+                ${"-l mem_free=" + mem_mb + "M" + " -l h_vmem=" + mem_mb + "M"} \
                 ${"-q " + sge_queue} \
                 ${"-P " + sge_project} \
                 /usr/bin/env bash ${cwd}/sge_docker_script.sh
@@ -83,9 +84,10 @@ backend {
                 runtime-attributes = """
                 String? docker
                 String docker_shell = "/bin/bash"
+                String bind_cmd = ""
                 """
                 submit-docker = """
-                singularity exec --containall --bind ${cwd}:${docker_cwd} docker://${docker} ${docker_shell} ${docker_script}
+                singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} docker://${docker} ${docker_shell} ${docker_script}
                 """
             }
         }
