implement loftee, re-merge tasks into main script for simplicity

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -21,10 +21,12 @@ backend {
                 Int? preemptible
                 Int? maxRetries
                 String bind_cmd = ""
+                String singularity_local = ""
                 """
 
                 submit = """
                 qsub \
+                -q short.q,long.q \
                 -terse \
                 -V \
                 -b y \
@@ -33,7 +35,7 @@ backend {
                 -o ${out} \
                 -e ${err} \
                 -pe smp ${cpu} \
-                ${"-l mem_free=" + mem_mb + "M"} \
+                ${"-l mem_free=" + mem_mb + "M" + " -l h_vmem=" + mem_mb + "M"} \
                 ${"-q " + sge_queue} \
                 ${"-P " + sge_project} \
                 /usr/bin/env bash ${script}
@@ -54,9 +56,11 @@ backend {
                     echo "Successfully pulled ${docker}!"
                 # Create wrapper script around docker command
                 echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-                echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} docker://${docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+                if [ "${singularity_local}" == "" ]; then DOCKER_CMD="${'docker://' + docker}"; else DOCKER_CMD="${singularity_local}"; fi
+                echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} $DOCKER_CMD ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
                 # Submit job
                 qsub \
+                -q short.q,long.q \
                 -terse \
                 -V \
                 -b y \
@@ -85,11 +89,34 @@ backend {
                 String? docker
                 String docker_shell = "/bin/bash"
                 String bind_cmd = ""
+                String singularity_local = ""
                 """
                 submit-docker = """
-                singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} docker://${docker} ${docker_shell} ${docker_script}
+                if [ ${singularity_local} == "" ]; then DOCKER_CMD=${'docker://' + docker}; else DOCKER_CMD=${singularity_local}; fi
+                singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} $DOCKER_CMD ${docker_shell} ${docker_script}
                 """
             }
         }
     }
+}
+
+# Configure web service
+webservice {
+  port = CROMWELL_PORT_TO_SED
+  interface = localhost
+}
+
+
+# Use a MySQL database
+database {
+  profile = "slick.jdbc.MySQLProfile$"
+  #driver = "slick.driver.MySQLDriver$"
+  db {
+    url = "jdbc:mysql://DBHOST_TO_SED:DBPORT_TO_SED/DBNAME_TO_SED?useSSL=false&rewriteBatchedStatements=true&useLegacyDatetimeCode=false&serverTimezone=Australia/Sydney"
+    user = "cromwell_user"
+    password = "12345678!1aA"
+    driver = "com.mysql.cj.jdbc.Driver"
+    # needed a bigger timeout for big jc jobs, with 10k tasks
+    connectionTimeout = 5000
+  }
 }
