add call caching

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -100,6 +100,12 @@ backend {
     }
 }
 
+# Enable call-caching
+call-caching {
+  enabled = true
+  invalidate-bad-cache-results = true
+}
+
 # Configure web service
 webservice {
   port = CROMWELL_PORT_TO_SED
