update to vep task - add docker support, remove local singularity image support

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -21,7 +21,6 @@ backend {
                 Int? preemptible
                 Int? maxRetries
                 String bind_cmd = ""
-                String singularity_local = ""
                 """
 
                 submit = """
@@ -56,8 +55,7 @@ backend {
                     echo "Successfully pulled ${docker}!"
                 # Create wrapper script around docker command
                 echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-                if [ "${singularity_local}" == "" ]; then DOCKER_CMD="${'docker://' + docker}"; else DOCKER_CMD="${singularity_local}"; fi
-                echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} $DOCKER_CMD ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+                echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
                 # Submit job
                 qsub \
                 -q short.q,long.q \
@@ -89,11 +87,9 @@ backend {
                 String? docker
                 String docker_shell = "/bin/bash"
                 String bind_cmd = ""
-                String singularity_local = ""
                 """
                 submit-docker = """
-                if [ ${singularity_local} == "" ]; then DOCKER_CMD=${'docker://' + docker}; else DOCKER_CMD=${singularity_local}; fi
-                singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} $DOCKER_CMD ${docker_shell} ${docker_script}
+                singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} ${'docker://' + docker} ${docker_shell} ${docker_script}
                 """
             }
         }
