update memory options - support gcp

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -11,7 +11,7 @@ backend {
 
         runtime-attributes = """
         Int cpu = 2
-        Int? mem_mb
+        Int mem_mb
         String? sge_queue
         String? sge_project
         String? docker
