disabling ref disk localisation

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -153,7 +153,7 @@ backend {
           zones = "australia-southeast1-a australia-southeast1-b australia-southeast1-c"
         }
 
-        reference-disk-localization-manifest-files = ["gs://gcp-public-data--broad-references/refdisk_manifest.json"]
+        # reference-disk-localization-manifest-files = ["gs://gcp-public-data--broad-references/refdisk_manifest.json"]
       }
     }
   }
