update vep - cache dir parameter changed, update gcp bucket

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -20,7 +20,6 @@ backend {
         String? disks
         Int? preemptible
         Int? maxRetries
-        String bind_cmd = ""
         """
 
         submit = """
@@ -55,7 +54,7 @@ backend {
           echo "Successfully pulled ${docker}!"
         # Create wrapper script around docker command
         echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-        echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+        echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
         # Submit job
         qsub \
         -q short.q,long.q \
@@ -86,10 +85,9 @@ backend {
         runtime-attributes = """
         String? docker
         String docker_shell = "/bin/bash"
-        String bind_cmd = ""
         """
         submit-docker = """
-        singularity exec --containall --bind ${cwd}:${docker_cwd} ${bind_cmd} ${'docker://' + docker} ${docker_shell} ${docker_script}
+        singularity exec --containall --bind ${cwd}:${docker_cwd} ${'docker://' + docker} ${docker_shell} ${docker_script}
         """
       }
     }
@@ -100,7 +98,7 @@ backend {
         project = "pb-dev-312200"
 
         # Base bucket for workflow executions
-        root = "gs://somvar_tests/cromwell/executions"
+        root = "gs://kccgsomvar/cromwell/executions"
 
         # Make the name of the backend used for call caching purposes insensitive to the
         # PAPI version.
