Set concurrent GCP jobs - 100

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -94,6 +94,7 @@ backend {
     PAPIv2 {
       actor-factory = "cromwell.backend.google.pipelines.v2beta.PipelinesApiLifecycleActorFactory"
       config {
+        concurrent-job-limit = 100
         # Google project
         project = "pb-dev-312200"
 
