pon script - in testing

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -42,7 +42,7 @@ backend {
         submit-docker = """
         # Ensure SINGULARITY_CACHEDIR is set; else use a default based on user's home
         if [ -z $SINGULARITY_CACHEDIR ]
-          then CACHE_DIR=$HOME/.singularity/cache
+          then CACHE_DIR=$HOME/.singularity/cache; SINGULARITY_CACHEDIR=$CACHE_DIR
           else CACHE_DIR=$SINGULARITY_CACHEDIR
         fi
         # Ensure cache dir exists so lock file can be created
@@ -50,7 +50,7 @@ backend {
         LOCK_FILE=$CACHE_DIR/singularity_pull_flock
         # Create an exclusive filelock
         flock --exclusive --timeout 900 $LOCK_FILE \
-          singularity exec --containall docker://${docker} \
+          singularity exec --containall ${'docker://' + docker} \
           echo "Successfully pulled ${docker}!"
         # Create wrapper script around docker command
         echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
