use GCP service account

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -115,7 +115,7 @@ backend {
         genomics {
           # A reference to an auth defined in the `google` stanza at the top. This auth is used
           # to create pipelines and manipulate auth JSONs.
-          auth = "application_default"
+          auth = "service_account"
 
           # Endpoint for APIs, no reason to change this unless directed by Google.
           endpoint-url = "https://lifesciences.googleapis.com/"
@@ -130,7 +130,7 @@ backend {
 
         filesystems {
           gcs {
-            auth = "application_default"
+            auth = "service_account"
             project = "pb-dev-312200"
           }
         }
@@ -164,6 +164,12 @@ google {
     {
       name = "application_default"
       scheme = "application_default"
+    },
+    {
+      name = "service_account"
+      scheme = "service_account"
+      service-account-id = "GCP_SA_EMAIL_TO_SED"
+      pem-file = "ROOT_PATH_TO_SED/.service_account.key.pem"
     }
   ]
 }
@@ -171,7 +177,7 @@ google {
 engine {
   filesystems {
     gcs {
-      auth = "application_default"
+      auth = "service_account"
       project = "pb-dev-312200"
     }
   }
