add option to configure_cromwell.sh to turn off call caching

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -96,8 +96,9 @@ backend {
 
 # Enable call-caching
 call-caching {
-  enabled = true
+  enabled = CALL_CACHING_TO_SED
   invalidate-bad-cache-results = true
+  hashing-strategy: "fingerprint"
 }
 
 # Configure web service
