add configurable project and cromwell root for GCP runs

--- a/workflow/mutect2.google.conf
+++ b/workflow/mutect2.google.conf
@@ -9,10 +9,10 @@ backend {
       config {
         concurrent-job-limit = 100
         # Google project
-        project = "pb-dev-312200"
+        project = "GCP_PROJECT_TO_SED"
 
         # Base bucket for workflow executions
-        root = "gs://kccgsomvar/cromwell/executions"
+        root = "gs://CROMWELL_ROOT_TO_SED/cromwell/executions"
 
         # Make the name of the backend used for call caching purposes insensitive to the
         # PAPI version.
@@ -44,7 +44,7 @@ backend {
         filesystems {
           gcs {
             auth = "service_account"
-            project = "pb-dev-312200"
+            project = "GCP_PROJECT_TO_SED"
           }
         }
 
@@ -91,7 +91,7 @@ engine {
   filesystems {
     gcs {
       auth = "service_account"
-      project = "pb-dev-312200"
+      project = "GCP_PROJECT_TO_SED"
     }
   }
 }
