set SGE backend to use cache-copy localization method before copy

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -76,6 +76,24 @@ backend {
 
         kill = "qdel ${job_id}"
         check-alive = "qstat -j ${job_id}"
+
+        filesystems {
+          local {
+            localization: [
+              "hard-link", "soft-link", "cached-copy", "copy"
+            ]
+
+            caching {
+              duplication-strategy: [
+                "hard-link", "soft-link", "cached-copy", "copy"
+              ]
+
+              hashing-strategy: "fingerprint"
+
+              fingerprint-size: 10485760
+            }
+          }
+        }
       }
     }
     singularity {
@@ -89,6 +107,24 @@ backend {
         submit-docker = """
         singularity exec --containall --bind ${cwd}:${docker_cwd} ${'docker://' + docker} ${docker_shell} ${docker_script}
         """
+
+        filesystems {
+          local {
+            localization: [
+              "hard-link", "soft-link", "cached-copy", "copy"
+            ]
+
+            caching {
+              duplication-strategy: [
+                "hard-link", "soft-link", "cached-copy", "copy"
+              ]
+
+              hashing-strategy: "fingerprint"
+
+              fingerprint-size: 10485760
+            }
+          }
+        }
       }
     }
   }
@@ -98,7 +134,6 @@ backend {
 call-caching {
   enabled = CALL_CACHING_TO_SED
   invalidate-bad-cache-results = true
-  hashing-strategy: "fingerprint"
 }
 
 # Configure web service
