add tmpdir to vep and annovar tasks

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -54,7 +54,7 @@ backend {
           echo "Successfully pulled ${docker}!"
         # Create wrapper script around docker command
         echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-        echo singularity exec --containall --bind ${cwd}:${docker_cwd} ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+        echo singularity exec --containall --bind ${cwd}:${docker_cwd} --bind $TMPDIR:/tmp ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
         # Submit job
         qsub \
         -q short.q,long.q \
@@ -67,6 +67,7 @@ backend {
         -e ${err} \
         -pe smp ${cpu} \
         ${"-l mem_free=" + mem_mb + "M" + " -l h_vmem=" + mem_mb + "M"} \
+        ${"-l tmp_requested=" + disks + "G"} \
         ${"-q " + sge_queue} \
         ${"-P " + sge_project} \
         /usr/bin/env bash ${cwd}/sge_docker_script.sh
