--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -18,6 +18,7 @@ backend {
         String docker_shell = "/bin/bash"
         Int? bootDiskSizeGb
         String? disks
+        Int? tmp_disk
         Int? preemptible
         Int? maxRetries
         """
@@ -34,6 +35,7 @@ backend {
         -e ${err} \
         -pe smp ${cpu} \
         ${"-l mem_free=" + mem_mb + "M" + " -l h_vmem=" + mem_mb + "M"} \
+        ${"-l tmp_requested=" + tmp_disk + "G"} \
         ${"-q " + sge_queue} \
         ${"-P " + sge_project} \
         /usr/bin/env bash ${script}
@@ -67,7 +69,7 @@ backend {
         -e ${err} \
         -pe smp ${cpu} \
         ${"-l mem_free=" + mem_mb + "M" + " -l h_vmem=" + mem_mb + "M"} \
-        ${"-l tmp_requested=" + disks + "G"} \
+        ${"-l tmp_requested=" + tmp_disk + "G"} \
         ${"-q " + sge_queue} \
         ${"-P " + sge_project} \
         /usr/bin/env bash ${cwd}/sge_docker_script.sh
