--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -56,7 +56,7 @@ backend {
           echo "Successfully pulled ${docker}!"
         # Create wrapper script around docker command
         echo '#!/bin/bash' > ${cwd}/sge_docker_script.sh
-        echo singularity exec --containall --bind ${cwd}:${docker_cwd} --bind $TMPDIR:/tmp ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
+        echo singularity exec --containall --bind ${cwd}:${docker_cwd} --bind \$TMPDIR:/tmp ${'docker://' + docker} ${docker_shell} ${docker_script} >> ${cwd}/sge_docker_script.sh
         # Submit job
         qsub \
         -q short.q,long.q \
