fix TMPDIR for singularity backend

--- a/workflow/mutect2.conf
+++ b/workflow/mutect2.conf
@@ -108,7 +108,7 @@ backend {
         String docker_shell = "/bin/bash"
         """
         submit-docker = """
-        singularity exec --containall --bind ${cwd}:${docker_cwd} ${'docker://' + docker} ${docker_shell} ${docker_script}
+        singularity exec --containall --bind ${cwd}:${docker_cwd} --bind \$TMPDIR:/tmp ${'docker://' + docker} ${docker_shell} ${docker_script}
         """
 
         filesystems {
