--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -90,3 +90,13 @@ workflows:
         email: m.geaghan@garvan.org.au
         role: "Production Bioinformatician"
         affiliation: "Garvan Institute of Medical Research"
+  - name: KCCGMutect2CHIP_Call_U2AF1
+    subclass: WDL
+    primaryDescriptorPath: /workflow/call_u2af1.wdl
+    publish: true
+    authors:
+      - name: "Michael Geaghan"
+        orcid: "0000-0002-4350-8600"
+        email: m.geaghan@garvan.org.au
+        role: "Production Bioinformatician"
+        affiliation: "Garvan Institute of Medical Research"
