add fixes for u2af1 stage

--- a/docker/u2af1/Dockerfile
+++ b/docker/u2af1/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:slim-bookworm
 
 RUN apt-get update \
-  && apt-get install -y git build-essential \
+  && apt-get install -y git build-essential gawk \
   && rm -r /var/lib/apt/lists/* \
   && rm -r /var/cache/apt/* \
   && mkdir /software \
