add u2af1 workflow as optional (default on) step to full and pon workflows

--- a/input/config/inputs.full.toml
+++ b/input/config/inputs.full.toml
@@ -27,6 +27,10 @@ make_bamout = true
 compress_vcfs = true
 gga_vcf = 'OPTIONAL_FILE'
 gga_vcf_idx = 'OPTIONAL_FILE'
+u2af1 = true
+u2af1_regions_file = 'OPTIONAL_FILE'
+pileup_docker = 'australia-southeast1-docker.pkg.dev/pb-dev-312200/somvar-images/u2af1:latest'
+merge_docker = 'australia-southeast1-docker.pkg.dev/pb-dev-312200/somvar-images/chip_pre_post_filter:latest'
 vep = true
 vep_cache_archive = 'OPTIONAL_ZIP_FILE'
 vep_species = 'homo_sapiens'
